tests/short_assign_top_level_bad.hop
// Verifies short assignment is not a top-level declaration.
x := 1
